--- a/index.html
+++ b/index.html
@@ -419,27 +419,27 @@
 
         /* Стили для раздела помощников внутри модального окна */
         .helpers-container {
-            padding: 1rem;
+            padding: 0.8rem; /* Уменьшим внутренний отступ контейнера */
         }
 
         .helper-item {
             background: var(--card-bg);
             border: 1px solid var(--border);
-            border-radius: 1rem;
-            padding: 0.8rem;
-            margin-bottom: 0.8rem;
+            border-radius: 0.8rem; /* Уменьшим радиус скругления */
+            padding: 0.6rem; /* Уменьшим внутренний отступ элемента */
+            margin-bottom: 0.6rem; /* Уменьшим нижний отступ */
             display: flex;
-            gap: 0.8rem; /* Уменьшим зазор между элементами */
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
-            align-items: center; /* Выравниваем элементы по вертикали по центру */
+            gap: 0.6rem; /* Уменьшим зазор между элементами */
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05); /* Уменьшим тень */
+            align-items: center;
         }
 
         .helper-info {
             flex-grow: 1;
-            min-width: 0; /* Важно для предотвращения переполнения */
+            min-width: 0;
             display: flex;
-            flex-direction: column; /* Размещаем имя и описание вертикально */
-            gap: 0.3rem; /* Зазор между именем и описанием */
+            flex-direction: column;
+            gap: 0.2rem; /* Уменьшим зазор между именем и описанием */
         }
 
         .helper-name {
@@ -448,41 +448,41 @@
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
-            font-size: 0.8rem; /* Немного уменьшим размер имени */
+            font-size: 0.7rem; /* Уменьшим размер имени */
         }
 
         .helper-description {
             color: var(--subtext);
-            font-size: 0.7rem; /* Еще немного уменьшим размер описания */
+            font-size: 0.6rem; /* Уменьшим размер описания */
             font-family: sans-serif;
             overflow: hidden;
             text-overflow: ellipsis;
         }
 
         .helper-details {
-            font-size: 0.7rem; /* Уменьшим размер шрифта */
+            font-size: 0.6rem; /* Уменьшим размер шрифта */
             display: flex;
-            gap: 0.3rem;
+            gap: 0.2rem;
             align-items: center;
         }
 
         .helper-details img {
-            height: 12px; /* Уменьшим размер иконки */
+            height: 10px; /* Уменьшим размер иконки */
         }
 
         .helper-details .income-text {
             font-family: 'Press Start 2P', cursive;
-            font-size: 0.6rem; /* Уменьшим размер шрифта */
+            font-size: 0.5rem; /* Уменьшим размер шрифта */
         }
 
         .buy-button {
             background-color: var(--accent);
             color: white;
             border: none;
-            border-radius: 0.5rem;
-            padding: 0.3rem 0.5rem; /* Уменьшим отступы кнопки */
+            border-radius: 0.4rem; /* Уменьшим радиус скругления */
+            padding: 0.2rem 0.4rem; /* Уменьшим отступы кнопки */
             cursor: pointer;
-            font-size: 0.6rem; /* Уменьшим размер шрифта кнопки */
+            font-size: 0.5rem; /* Уменьшим размер шрифта кнопки */
             transition: background-color 0.2s ease;
             white-space: nowrap;
         }
@@ -498,19 +498,19 @@
 
         .owned-text {
             font-family: 'Press Start 2P', cursive;
-            font-size: 0.6rem; /* Уменьшим размер шрифта */
+            font-size: 0.5rem; /* Уменьшим размер шрифта */
             white-space: nowrap;
         }
 
         .helpers-list {
-            margin-top: 1rem;
+            margin-top: 0.8rem; /* Уменьшим верхний отступ */
         }
 
         .helpers-list h3 {
             font-family: 'Rubik Mono One', sans-serif;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.4rem; /* Уменьшим нижний отступ */
             text-align: center;
-            font-size: 1rem; /* Уменьшим размер заголовка */
+            font-size: 0.9rem; /* Уменьшим размер заголовка */
         }
     </style>
 </head>
@@ -738,7 +738,8 @@
                                 <div class="helper-name">${helper.name}</div>
                                 <div class="helper-description">${helper.description}</div>
                                 <div class="helper-details">
-                                    <img src="${COIN_ICON_URL}" alt="Coin"> <span class="income-text">${helper.income} в секунду</span>
+                                    <img src="${COIN_ICON_URL}" alt="Coin">
+                                    <span class="income-text">${helper.income} в секунду</span>
                                 </div>
                             </div>
                             <button class="buy-button ${userData.tokens < helper.cost ? 'disabled' : ''}" data-helper-id="${helperId}">
@@ -866,7 +867,7 @@
                             const initData = Telegram.WebApp.initDataUnsafe;
                             const userId = initData?.user?.id;
                             if (userId) {
-                                const referralLink = `https://t.me/ваше_бот_имя?start=${userId}`; // Замените "ваше_бот_имя" на имя вашего Telegram-бота
+                                const referralLink = `https://t.me/ваше_бот_имя?start=${userId}`; // Замените "ваше_бот_имя" на имя вашего Telegram-бота!
                                 referralLinkContainer.innerHTML = `<p style="color: var(--primary);">Поделись этой ссылкой:</p><p><a href="${referralLink}" target="_blank">${referralLink}</a></p>`;
                                 // В реальной системе вам нужно будет отслеживать переходы по этой ссылке и начисление монет.
                                 // Для примера, можно просто начислить монеты сразу после нажатия кнопки (без реальной проверки).
