--- a/index.html
+++ b/index.html
@@ -463,10 +463,10 @@
         .helper-name {
             font-weight: bold;
             font-family: 'Rubik Mono One', sans-serif;
-            white-space: nowrap;
+            /* white-space: nowrap; */ /* Убираем запрет на перенос строки */
             overflow: hidden;
             text-overflow: ellipsis;
-            font-size: 0.65rem; /* Еще немного уменьшим шрифт */
+            font-size: 0.65rem; /* Еще немного уменьшим шрифт, если нужно будет */
             margin-bottom: 0.2rem; /* Небольшой отступ между именем и описанием */
         }
 
@@ -490,9 +490,9 @@
             color: white;
             border: none;
             border-radius: 0.4rem;
-            padding: 0.2rem 0.4rem;
+            padding: 0.15rem 0.3rem; /* Уменьшим отступы кнопки */
             cursor: pointer;
-            font-size: 0.5rem;
+            font-size: 0.45rem; /* Уменьшим шрифт кнопки */
             transition: background-color 0.2s ease;
             white-space: nowrap;
         }
@@ -517,15 +517,15 @@
         }
 
         .helper-income img {
-            height: 10px;
+            height: 9px; /* Уменьшим размер иконки */
             margin-left: 0.2rem; /* Добавим небольшой отступ слева от иконки */
         }
 
         .owned-text {
             font-family: 'Press Start 2P', cursive;
-            font-size: 0.5rem;
+            font-size: 0.45rem; /* Уменьшим шрифт */
             white-space: nowrap;
-            margin-top: 0.2rem; /* Небольшой отступ снизу */
+            margin-top: 0.1rem; /* Уменьшим отступ снизу */
             text-align: right; /* Выравниваем по правому краю */
         }
 
@@ -772,11 +772,11 @@
                             </div>
                             <div class="helper-bottom-actions">
                                 <button class="buy-button ${userData.tokens < helper.cost ? 'disabled' : ''}" data-helper-id="${helperId}">
-                                    Купить (${helper.cost} <img src="${COIN_ICON_URL}" alt="Coin" style="height: 14px; vertical-align: middle;">)
+                                    Купить (${helper.cost} <img src="${COIN_ICON_URL}" alt="Coin" style="height: 12px; vertical-align: middle;">)
                                 </button>
                                 <div class="helper-income">
                                     <span>${helper.income}</span>
-                                    <img src="${COIN_ICON_URL}" alt="Coin" style="height: 12px; vertical-align: middle;">
+                                    <img src="${COIN_ICON_URL}" alt="Coin" style="height: 9px; vertical-align: middle;">
                                     <div class="owned-text">Куплено: ${owned}</div>
                                 </div>
                             </div>
