--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         .helper-income {
             font-size: 0.6rem;
             display: flex;
-            gap: 0.2rem;
+            gap: 0.1rem; /* Уменьшим основной зазор */
             align-items: center;
             font-family: 'Press Start 2P', cursive;
             flex-direction: column; /* Размещаем доход и "Куплено" вертикально */
@@ -523,6 +523,7 @@
 
         .helper-income img {
             height: 9px; /* Уменьшим размер иконки */
+            margin-right: 0.1rem; /* Небольшой отступ справа от иконки */
         }
 
         .income-text {
@@ -531,7 +532,6 @@
             white-space: nowrap;
             display: flex;
             align-items: center;
-            gap: 0.1rem;
         }
 
         .owned-text {
@@ -789,8 +789,8 @@
                                 </button>
                                 <div class="helper-income">
                                     <div class="income-text">
-                                        <span>${helper.income} <img src="${COIN_ICON_URL}" alt="Coin" style="height: 9px; vertical-align: middle;"></span>
-                                        <span style="font-size: 0.7rem; margin-left: 0.1rem;">в сек.</span>
+                                        <span>${helper.income} <img src="${COIN_ICON_URL}" alt="Coin" style="height: 9px; vertical-align: middle; margin-right: 0.1rem;"></span>
+                                        <span style="font-size: 0.7rem;">в сек.</span>
                                     </div>
                                     <div class="owned-text">Куплено: ${owned}</div>
                                 </div>
