--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     body {
         font-family: 'Bungee', cursive, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; /* Добавлены системные шрифты для iOS */
         background:
-            url('fon.jpg') center/cover no-repeat, /* Ваша картинка сверху */
+            url('fon.fon.png') center/cover no-repeat, /* Ваша картинка сверху */
             linear-gradient(180deg, #dbeafe 0%, #f0f4f8 100%); /* Старый градиент снизу */
         color: var(--text);
         -webkit-font-smoothing: antialiased;
